# plexipy

./: .dockerignore  .gitignore  .hadolint.yaml  Dockerfile  Dockerfile.isolated  LINTING.md  MCP_SETUP.md  README.md  SIMPLE_GUIDE.md  auth_config.json  config.json  docker-compose.airgapped.yml  docker-compose.dev.yml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_pip.sh  sonar-project.properties  tm1_config.json
apps/: __init__.py
apps/hello/: config.json  handlers.py
apps/pov/: __init__.py  config.json  handlers.py  requirements.txt  tm1_operations.py
apps/pov/static/: index.html  token.html
apps/tm1data/: config.json  handlers.py  requirements.txt
apps/tm1data/static/: index.html
apps/tm1query/: config.json  handlers.py  requirements.txt
apps/tm1query/static/: index.html
k8s/: README.md
k8s/apps/: pov.yaml  template-deployment.yaml  tm1data.yaml
k8s/base/: configmap.yaml  ingress.yaml  main-deployment.yaml  main-service.yaml  namespace.yaml
nginx/: docker-nginx.conf  pyrest.conf
pyrest/: __init__.py  app_loader.py  auth.py  config.py  decorators.py  handlers.py  nginx_generator.py  process_manager.py  server.py  simple_handler.py  validation.py  venv_manager.py
pyrest/admin/: __init__.py  handlers.py
pyrest/admin/static/: index.html  styles.css
pyrest/templates/: __init__.py  isolated_app.py  landing.html
pyrest/tm1/: __init__.py  client.py  dataframe.py
pyrest/utils/: __init__.py  logging.py  tm1.py
scripts/: build-all-images.sh  build-app-image.sh  docker-build.ps1  docker-build.sh  entrypoint-unified.sh  entrypoint.sh  hadolint-report.ps1  lint-all.ps1  lint-all.sh  lint-dockerfile.ps1  lint-dockerfile.sh  start_isolated_apps.sh
tests/: __init__.py  conftest.py  test_app_loader.py  test_auth.py  test_azure_auth.py  test_config.py  test_config_parser.py  test_decorators.py  test_handlers.py  test_integration.py  test_nginx_generator.py  test_process_manager.py  test_utils_logging.py  test_utils_tm1.py  test_venv_manager.py
